Almost done with ServerPilot Ansible script
Need to make sure SP install stuff skips if it's already been added, address #TODO, and any more errors that come up when I try to run it

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-terraform.tfstate
-*.tfvars
+*.tfstate
+*.tfstate.backup
+.terraform
+*.auto.tfvars
 .DS_Store
 _env.rb
+*.cfg
+.vault_pass
+vault.yml
+*.retry
